--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,11 +32,15 @@ services:
       - api
     volumes:
       - ./data/import:/app/files
-      
-  compass:
-    image: mongocompass/mongocompass:latest
-    container_name: compass-container
+
+  mongo-express:
+    image: mongo-express:latest
+    container_name: mongo-express-container
     ports:
-      - 27017:27017
+      - 8081:8081
+    environment:
+      - ME_CONFIG_MONGODB_SERVER=mongo
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=secret
     depends_on:
       - mongo
