--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,7 +34,7 @@ services:
       - ./data/import:/app/files
 
   mongo-express:
-    image: mongo-express:latest
+    image: mongo-express:1.0.0-alpha.4
     container_name: mongo-express-container
     ports:
       - 8081:8081
